--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken">
 	<!-- Page Title -->
-    <title>Gitar - Music Band & Musician HTML Template</title>
+    <title>Melodina Santos</title>
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="https://html.awaikenthemes.com/gitar/images/favicon.png">
 	<!-- Google Fonts Css-->
@@ -18,7 +18,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 	<!-- Bootstrap Css -->
 	<link href="https://html.awaikenthemes.com/gitar/css/bootstrap.min.css" rel="stylesheet" media="screen">
-	<!-- SlickNav Css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- SlickNav Css -->
 	<link href="https://html.awaikenthemes.com/gitar/css/slicknav.min.css" rel="stylesheet">
 	<!-- Swiper Css -->
 	<link rel="stylesheet" href="https://html.awaikenthemes.com/gitar/css/swiper-bundle.min.css">
@@ -59,7 +60,7 @@
                     <div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                                 <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
                                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact Me</a></li>
                             </ul>
@@ -84,7 +85,7 @@
 						<h1 class="wow fadeInUp" data-cursor="-opaque">Contact us</h1>
 						<nav class="wow fadeInUp" data-wow-delay="0.2s">
                             <ol class="breadcrumb">
-								<li class="breadcrumb-item"><a href="https://html.awaikenthemes.com/gitar/">home</a></li>
+								<li class="breadcrumb-item"><a href="index.html">home</a></li>
 								<li class="breadcrumb-item active" aria-current="page">contact us</li>
 							</ol>
 						</nav>
@@ -104,8 +105,8 @@
                     <!-- Section Title Start -->
                     <div class="section-title">
                         <h3 class="wow fadeInUp">contact us</h3>
-                        <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque">reach out to our <span>gitar support</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s">Contact us for support, information, or to get involved.we're here help and welcome you to our community</p>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque">reach out to our <span>support</span></h2>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">Contact me for support, information, or to get involved.we're here help and welcome you to our community</p>
                     </div>
                     <!-- Section Title End -->
                 </div>
@@ -122,7 +123,7 @@
                             </div>
                             <div class="contact-info-content">
                                 <p>give us a call</p>
-                                <h3><a href="tel:123456789">+91 123 456 789</a></h3>
+                                <h3><a href="tel:+1 347-417-6622">+1 347-417-66229</a></h3>
                             </div>
                         </div>
                         <!-- Contact Info Item End -->
@@ -134,7 +135,7 @@
                             </div>
                             <div class="contact-info-content">
                                 <p>Send us a message</p>
-                                <h3><a href="mailto:info@domain.com">info@domain.com</a></h3>
+                                <h3><a href="mailto:santosmelodina607@gmail.com">santosmelodina607@gmail.com</a></h3>
                             </div>
                         </div>
                         <!-- Contact Info Item End -->
@@ -146,7 +147,7 @@
                             </div>
                             <div class="contact-info-content">
                                 <p>Visit our location</p>
-                                <h3>786 Maple Avenue Smalltown,USA 67890</h3>
+                                <h3>New York City, New York</h3>
                             </div>
                         </div>
                         <!-- Contact Info Item End -->
@@ -295,6 +296,7 @@
                                 <li><a href="https://www.facebook.com/Melodina.Santos.Maria "><i class="fa-brands fa-facebook-f"></i></a></li>
                                 <li><a href="https://www.linkedin.com/in/melodina-santos-061017y/ "><i class="fa-brands fa-linkedin"></i></a></li>
                                 <li><a href="https://www.instagram.com/melodinasantos/ "><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="https://www.youtube.com/@melodinasantos"><i class="fa-brands fa-youtube"></i></a></li>
                             </ul>
                         </div>
                         <!-- Footer Social Link End -->
