--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                 <img src="https://html.awaikenthemes.com/gitar/images/album-image-1.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
-                                <a href="https://html.awaikenthemes.com/gitar/album-single.html">
+                                <a href="">
                                     <img src="https://html.awaikenthemes.com/gitar/images/arrow-white.svg" alt="">
                                 </a>
                             </div>
@@ -376,7 +376,7 @@
 
                         <!-- Album Item Content Start -->
                         <div class="album-item-content">
-                            <h3><a href="https://html.awaikenthemes.com/gitar/album-single.html">No More Love</a></h3>
+                            <h3><a href="">No More Love</a></h3>
                             <p>DJ Troy</p>
                         </div>
                         <!-- Album Item Content End -->
@@ -393,7 +393,7 @@
                                 <img src="https://html.awaikenthemes.com/gitar/images/album-image-2.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
-                                <a href="https://html.awaikenthemes.com/gitar/album-single.html">
+                                <a href="">
                                     <img src="https://html.awaikenthemes.com/gitar/images/arrow-white.svg" alt="">
                                 </a>
                             </div>
@@ -402,7 +402,7 @@
 
                         <!-- Album Item Content Start -->
                         <div class="album-item-content">
-                            <h3><a href="https://html.awaikenthemes.com/gitar/album-single.html">Glitch City</a></h3>
+                            <h3><a href="">Glitch City</a></h3>
                             <p>DJ Troy</p>
                         </div>
                         <!-- Album Item Content End -->
@@ -419,7 +419,7 @@
                                 <img src="https://html.awaikenthemes.com/gitar/images/album-image-3.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
-                                <a href="https://html.awaikenthemes.com/gitar/album-single.html">
+                                <a href="">
                                     <img src="https://html.awaikenthemes.com/gitar/images/arrow-white.svg" alt="">
                                 </a>
                             </div>
@@ -428,7 +428,7 @@
 
                         <!-- Album Item Content Start -->
                         <div class="album-item-content">
-                            <h3><a href="https://html.awaikenthemes.com/gitar/album-single.html">Imagine</a></h3>
+                            <h3><a href="">Imagine</a></h3>
                             <p>DJ Remix</p>
                         </div>
                         <!-- Album Item Content End -->
@@ -445,7 +445,7 @@
                                 <img src="https://html.awaikenthemes.com/gitar/images/album-image-4.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
-                                <a href="https://html.awaikenthemes.com/gitar/album-single.html">
+                                <a href="">
                                     <img src="https://html.awaikenthemes.com/gitar/images/arrow-white.svg" alt="">
                                 </a>
                             </div>
@@ -454,7 +454,7 @@
 
                         <!-- Album Item Content Start -->
                         <div class="album-item-content">
-                            <h3><a href="https://html.awaikenthemes.com/gitar/album-single.html">Hello Love</a></h3>
+                            <h3><a href="">Hello Love</a></h3>
                             <p>DJ Remix</p>
                         </div>
                         <!-- Album Item Content End -->
