--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 	<link rel="stylesheet" href="https://html.awaikenthemes.com/gitar/css/mousecursor.css">
 	<!-- Main Custom Css -->
 	<link href="https://html.awaikenthemes.com/gitar/css/custom.css" rel="stylesheet" media="screen">
+
+    <!-- Magnific Popup -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+
 </head>
 <body>
 
@@ -487,25 +492,32 @@
             <div class="row no-gutters">
                 <div class="col-lg-12">
                     <!-- Intro Video Box Start -->
-                    <div class="intro-video-box">
-                        <div class="intro-bg-image">
-                            <a href="https://youtu.be/tAvPzoLtN7g?si=sSEj4ZvLb_MFL3Kh" class="popup-video" data-cursor-text="Play">
-                                <figure>
-                                    <img src="singer/6.jpg" alt="">
+                    <div class="intro-video-box position-relative" style="height: 500px; overflow: hidden;">
+                        <!-- Background Image with Playable Link -->
+                        <div class="intro-bg-image" style="height: 100%;">
+                            <a href="https://www.youtube.com/watch?v=AyEkALUiFbY"
+                               class="popup-video"
+                               data-cursor-text="Play">
+                                <figure style="height: 100%; margin: 0;">
+                                    <img src="singer/6.jpg" alt="Singer Promo" style="object-fit: cover; width: 100%; height: 100%;">
                                 </figure>
-                            </a>                            
-                        </div>
-                        <!-- Video Play Button Start -->
-                        <div class="video-play-button">
-                            <a href="https://youtu.be/tAvPzoLtN7g?si=sSEj4ZvLb_MFL3Kh" class="popup-video" data-cursor-text="Play">
-                                <i class="fa-solid fa-play"></i>
                             </a>
                         </div>
-                        <!-- Video Play Button End -->
+
+                        <!-- Video Play Button -->
+                        <div class="video-play-button position-absolute top-50 start-50 translate-middle">
+                            <a href="https://www.youtube.com/watch?v=AyEkALUiFbY"
+                               class="popup-video"
+                               data-cursor-text="Play">
+                                <i class="fa-solid fa-play fa-2x"></i>
+                            </a>
+                        </div>
                     </div>
                     <!-- Intro Video Box End -->
-                </div>                
+                </div>
             </div>
+
+
         </div>
     </div>
     <!-- Intro Video Section End -->
@@ -975,5 +987,24 @@
     <!-- Main Custom js file -->
     <script src="https://html.awaikenthemes.com/gitar/js/function.js"></script>
 	<script src="https://demo.awaikenthemes.com/assets/js/theme-panel.js"></script>
+
+    <!-- Add this in your HTML footer or inside a <script> tag -->
+    <script>
+        $(document).ready(function() {
+            $('.popup-video').magnificPopup({
+                type: 'iframe',
+                iframe: {
+                    patterns: {
+                        youtube: {
+                            index: 'youtube.com/',
+                            id: 'v=',
+                            src: 'https://www.youtube.com/embed/%id%?autoplay=1&rel=0'
+                        }
+                    }
+                }
+            });
+        });
+    </script>
+
 </body>
 </html>
