--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@
                     <div class="about-footer">
                         <!-- Footer Logo Start -->
                         <div class="footer-logo">
-                            <img src="https://html.awaikenthemes.com/gitar/images/footer-logo.svg" alt="">
+                            <img src="logo.png" alt="">
                         </div>
                         <!-- Footer Logo End -->
                     </div>
