--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                     <div class="about-footer">
                         <!-- Footer Logo Start -->
                         <div class="footer-logo">
-                            <img src="https://html.awaikenthemes.com/gitar/images/footer-logo.svg" alt="">
+                            <img src="logo.png" alt="">
                         </div>
                         <!-- Footer Logo End -->                        
                     </div>
