--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                                 <img src="https://html.awaikenthemes.com/gitar/images/album-image-1.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
-                                <a href="">
+                                <a href="https://youtu.be/hlZx4m_W-bs?feature=shared">
                                     <img src="https://html.awaikenthemes.com/gitar/images/arrow-white.svg" alt="">
                                 </a>
                             </div>
@@ -397,7 +397,7 @@
                                 <img src="https://html.awaikenthemes.com/gitar/images/album-image-2.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
-                                <a href="">
+                                <a href="https://youtu.be/HaOF6fzd4Fo?feature=shared">
                                     <img src="https://html.awaikenthemes.com/gitar/images/arrow-white.svg" alt="">
                                 </a>
                             </div>
@@ -422,7 +422,7 @@
                                 <img src="https://html.awaikenthemes.com/gitar/images/album-image-3.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
-                                <a href="">
+                                <a href="https://youtu.be/b5Y_qr9gNs8?feature=shared">
                                     <img src="https://html.awaikenthemes.com/gitar/images/arrow-white.svg" alt="">
                                 </a>
                             </div>
@@ -447,7 +447,7 @@
                                 <img src="https://html.awaikenthemes.com/gitar/images/album-image-4.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
-                                <a href="">
+                                <a href="https://youtu.be/QNWU2ir9zn0?feature=shared">
                                     <img src="https://html.awaikenthemes.com/gitar/images/arrow-white.svg" alt="">
                                 </a>
                             </div>
