--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         <!-- Album Image Start -->
                         <div class="album-image">
                             <figure>
-                                <img src="https://html.awaikenthemes.com/gitar/images/album-image-1.jpg" alt="">
+                                <img src="album/1.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
                                 <a href="https://youtu.be/hlZx4m_W-bs?feature=shared">
@@ -394,7 +394,7 @@
                         <!-- Album Image Start -->
                         <div class="album-image">
                             <figure>
-                                <img src="https://html.awaikenthemes.com/gitar/images/album-image-2.jpg" alt="">
+                                <img src="album/2.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
                                 <a href="https://youtu.be/HaOF6fzd4Fo?feature=shared">
@@ -419,7 +419,7 @@
                         <!-- Album Image Start -->
                         <div class="album-image">
                             <figure>
-                                <img src="https://html.awaikenthemes.com/gitar/images/album-image-3.jpg" alt="">
+                                <img src="album/3.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
                                 <a href="https://youtu.be/b5Y_qr9gNs8?feature=shared">
@@ -444,7 +444,7 @@
                         <!-- Album Image Start -->
                         <div class="album-image">
                             <figure>
-                                <img src="https://html.awaikenthemes.com/gitar/images/album-image-4.jpg" alt="">
+                                <img src="album/4.jpg" alt="">
                             </figure>
                             <div class="album-item-btn">
                                 <a href="https://youtu.be/QNWU2ir9zn0?feature=shared">
