--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="hero-content">
                         <!-- Section Title Start -->
                         <div class="section-title dark-section">
-                            <h3 class="wow fadeInUp">Singing Artist</h3>
+                            <h3 class="wow fadeInUp">Professional Singer</h3>
                             <h1 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque"><span>Melodina Santos</span></h1>
                             <p class="wow fadeInUp" data-wow-delay="0.4s">Rooted in traditional.Raised by jazz.powered by passion</p>
                         </div>
