--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <!-- About Counter Item Start -->
                         <div class="about-counter-item">
                             <h2><span class="counter">32</span></h2>
-                            <h3>Concerts</h3>
+                            <h3>Events</h3>
                         </div>
                         <!-- About Counter Item End -->
                          
@@ -339,7 +339,7 @@
                 <div class="col-lg-12">
                     <!-- Section Footer Button Start -->
                     <div class="section-footer-btn wow fadeInUp" data-wow-delay="0.8s">
-                        <a href="https://www.youtube.com/@melodinasantos" class="btn-default">our youtube channel</a>
+                        <a href="https://www.youtube.com/@melodinasantos" class="btn-default">my youtube channel</a>
                     </div>
                     <!-- Section Footer Button End -->
                 </div>
@@ -466,7 +466,7 @@
                 <div class="col-lg-12">
                     <!-- Section Footer Text Start -->
                     <div class="section-footer-text wow fadeInUp" data-wow-delay="0.8s">
-                        <p>Looking for Unforgettable Live Music? <a href="contact.html">Book Us Today!</a></p>
+                        <p>Looking for Unforgettable Live Music? <a href="contact.html">Book Today!</a></p>
                     </div>
                     <!-- Section Footer Text End -->
                 </div>
