--- a/about.html
+++ b/about.html
@@ -82,11 +82,11 @@
 				<div class="col-lg-12">
 					<!-- Page Header Box Start -->
 					<div class="page-header-box">
-						<h1 class="wow fadeInUp" data-cursor="-opaque">About us</h1>
+						<h1 class="wow fadeInUp" data-cursor="-opaque">About me</h1>
 						<nav class="wow fadeInUp" data-wow-delay="0.2s">
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
-								<li class="breadcrumb-item active" aria-current="page">about us</li>
+								<li class="breadcrumb-item active" aria-current="page">about me</li>
 							</ol>
 						</nav>
 					</div>
@@ -106,7 +106,7 @@
                     <div class="section-title-content-btn">
                         <!-- Section Tite Start -->
                         <div class="section-title">
-                            <h3 class="wow fadeInUp">about us</h3>
+                            <h3 class="wow fadeInUp">about me</h3>
                             <h2 class="wow fadeInUp" data-wow-delay="0.2s">The soundtrack to your most <span>unforgettable</span></h2>
                         </div>
                         <!-- Section Tite End -->
@@ -123,8 +123,17 @@
                 <div class="col-lg-5">
                     <!-- Section Title Content Start -->
                     <div class="section-title-content">
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Hi I'm Melodina santos - A dynamic andversatile artist with jazz at the heart of my sound. My artistry goes beyond genre boundaries, as I love weaving together elements of pop, rock R & B, country and even traditional Japanese music. This fusion allows me to connect with diverse audiences and bring something fresh and unexpected to every set.</p>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s">At the core of my work is the mission to inspire the young talents through music. I believe in the power of authenticity and I'm passionate about using my voice - not to just entertain,but to uplift,empower and awaken something real in people's heart.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">
+                            Hi, I'm Melodina Santos — a dynamic and versatile artist with jazz at the heart of my sound.
+                            My artistry goes beyond genre boundaries, as I love weaving together elements of pop, rock, R&B,
+                            country, and even traditional Japanese music. This fusion allows me to connect with diverse audiences
+                            and bring something fresh and unexpected to every set.
+                        </p>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">
+                            At the core of my work is the mission to inspire young talents through music.
+                            I believe in the power of authenticity, and I'm passionate about using my voice — not just to entertain,
+                            but to uplift, empower, and awaken something real in people's hearts.
+                        </p>
                     </div>
                     <!-- Section Tite Content End -->
                 </div>
@@ -141,7 +150,7 @@
                 <div class="col-lg-12">
                     <!-- Section Title Start -->
                     <div class="section-title section-title-center">
-                        <h3 class="wow fadeInUp">our approach</h3>
+                        <h3 class="wow fadeInUp">my approach</h3>
                         <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque">mission, vision, and passion driving <span>our guitar craftsmanship</span></h2>
                     </div>
                     <!-- Section Title End -->
@@ -156,13 +165,13 @@
                         <div class="our-approach-nav wow fadeInUp" data-wow-delay="0.4s">
                             <ul class="nav nav-tabs" id="mvTab" role="tablist">
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link active" id="mission-tab" data-bs-toggle="tab" data-bs-target="#mission" type="button" role="tab" aria-selected="true">Our mission</button>
+                                    <button class="nav-link active" id="mission-tab" data-bs-toggle="tab" data-bs-target="#mission" type="button" role="tab" aria-selected="true">my mission</button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="vision-tab" data-bs-toggle="tab" data-bs-target="#vision" type="button" role="tab" aria-selected="false">Our vision</button>
+                                    <button class="nav-link" id="vision-tab" data-bs-toggle="tab" data-bs-target="#vision" type="button" role="tab" aria-selected="false">my vision</button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="value-tab" data-bs-toggle="tab" data-bs-target="#value" type="button" role="tab" aria-selected="false">Our value</button>
+                                    <button class="nav-link" id="value-tab" data-bs-toggle="tab" data-bs-target="#value" type="button" role="tab" aria-selected="false">my value</button>
                                 </li>
                             </ul>
                         </div>
@@ -175,9 +184,9 @@
                                     <div class="approach-tab-content">
                                         <!-- Section Title Start -->
                                         <div class="section-title">
-                                            <h3>our mission</h3>
+                                            <h3>my mission</h3>
                                             <h2 data-cursor="-opaque">inspiring harmony <span>through music</span></h2>
-                                            <p>To inspire the young talents through music . I believe in the power of authenticity. i am passionate about using my voice - not to just entertain ,but to uplift, empower and awaken something real in people's heart</p>
+                                            <p>To inspire young talents through music. I believe in the power of authenticity. I am passionate about using my voice — not just to entertain, but to uplift, empower, and awaken something real in people's hearts.</p>
                                         </div>
                                         <!-- Section Title End -->
 
@@ -212,7 +221,7 @@
                                     <div class="approach-tab-content">
                                         <!-- Section Title Start -->
                                         <div class="section-title">
-                                            <h3>our vision</h3>
+                                            <h3>my vision</h3>
                                             <h2 data-cursor="-opaque">Creating Connection <span>through Every Melody</span></h2>
                                             <p>To create a transcendent musical experience that brings cultures and eras - blending the elegance of traditional Japanese sounds with the emotional depth of jazz.</p>
                                         </div>
@@ -249,7 +258,7 @@
                                     <div class="approach-tab-content">
                                         <!-- Section Title Start -->
                                         <div class="section-title">
-                                            <h3>our value</h3>
+                                            <h3>my value</h3>
                                             <h2 data-cursor="-opaque">Rooted in Authenticity, <span>Raised by Passion</span></h2>
                                             <p>Emotional Connection – Strives to touch the hearts of diverse audiences through soulful expression and evocative storytelling.</p>
                                         </div>
@@ -524,25 +533,10 @@
                     <!-- FAQ Item End -->
 
                     <!-- FAQ Item Start -->
-                    <div class="accordion-item wow fadeInUp" data-wow-delay="0.6s">
-                        <h2 class="accordion-header" id="heading4">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                                4. Do you write your own songs?
-                            </button>
-                        </h2>
-                        <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#faqaccordion">
-                            <div class="accordion-body">
-                                <p>Yes! Most of my songs are original compositions inspired by personal experiences, emotions, and stories people can relate to.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- FAQ Item End -->
-
-                    <!-- FAQ Item Start -->
                     <div class="accordion-item wow fadeInUp" data-wow-delay="0.8s">
                         <h2 class="accordion-header" id="heading5">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
-                                5. How can I collaborate or get in touch?
+                                4. How can I collaborate or get in touch?
                             </button>
                         </h2>
                         <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#faqaccordion">
