--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
                                 <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
+                                <li class="nav-item"><a class="nav-link" href="about.html">About me</a>
                                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact Me</a></li>
                             </ul>
                         </div>
@@ -132,7 +132,7 @@
 
                         <!-- Section Button Start -->
                         <div class="section-btn wow fadeInUp" data-wow-delay="0.4s">
-                            <a href="about.html" class="btn-default">about more</a>
+<!--                            <a href="about.html" class="btn-default">about more</a>-->
                         </div>
                         <!-- Section Button End -->
                     </div>
@@ -142,7 +142,7 @@
                 <div class="col-lg-5">
                     <!-- Section Title Content Start -->
                     <div class="section-title-content">
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Hi I'm Melodina Santos - A vocalist-fusion & blending timeless traditional music with the soulful curves of jazz and other genres. Nice to meet you. I love weaving together elements of  pop,rock R & B, country. This fusion allows me to connect with diverse audiences and bring something fresh and unexpected to every set.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">Hi I'm Melodina Santos - A vocalist-fusion & blending timeless traditional music with the soulful curves of jazz and other genres. I love weaving together elements of  pop,rock R & B, country. This fusion allows me to connect with diverse audiences and bring something fresh and unexpected to every set.</p>
                         <p class="wow fadeInUp" data-wow-delay="0.4s">I'm on a mission to create bridges between cultures, genre & generations- inviting listeners into a space where ancient melodies meet modern expression.</p>
                     </div>
                     <!-- Section Tite Content End -->
