--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                     <div class="nav-menu-wrapper">
                         <ul class="navbar-nav mr-auto" id="menu">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
+                            <li class="nav-item"><a class="nav-link" href="about.html">About me</a>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact Me</a></li>
                         </ul>
                     </div>
@@ -614,7 +614,7 @@
                         <h3>quick link</h3>
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About us</a></li>
+                            <li><a href="about.html">About me</a></li>
                             <li><a href="contact.html">contacts</a></li>
                         </ul>
                     </div>
