--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
                                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
+                                <li class="nav-item"><a class="nav-link" href="about.html">About me</a>
                                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact Me</a></li>
                             </ul>
                         </div>
@@ -82,11 +82,11 @@
 				<div class="col-lg-12">
 					<!-- Page Header Box Start -->
 					<div class="page-header-box">
-						<h1 class="wow fadeInUp" data-cursor="-opaque">Contact us</h1>
+						<h1 class="wow fadeInUp" data-cursor="-opaque">Contact me</h1>
 						<nav class="wow fadeInUp" data-wow-delay="0.2s">
                             <ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="index.html">home</a></li>
-								<li class="breadcrumb-item active" aria-current="page">contact us</li>
+								<li class="breadcrumb-item active" aria-current="page">contact me</li>
 							</ol>
 						</nav>
 					</div>
@@ -104,8 +104,8 @@
                 <div class="col-lg-12">
                     <!-- Section Title Start -->
                     <div class="section-title">
-                        <h3 class="wow fadeInUp">contact us</h3>
-                        <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque">reach out to our <span>support</span></h2>
+                        <h3 class="wow fadeInUp">contact me</h3>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque">reach out to <span>support</span></h2>
                         <p class="wow fadeInUp" data-wow-delay="0.4s">Contact me for support, information, or to get involved.we're here help and welcome you to our community</p>
                     </div>
                     <!-- Section Title End -->
