--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
                         <h3>quick link</h3>
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About us</a></li>
+                            <li><a href="about.html">About me</a></li>
                             <li><a href="contact.html">contacts</a></li>
                         </ul>
                     </div>
