--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 
+    <style>
+        .social-links-center ul li a i {
+            font-size: 2rem; /* Adjust as needed */
+        }
+    </style>
 </head>
 <body>
 
@@ -193,6 +198,15 @@
                     </div>
                     <!-- About Counter Box End -->
                 </div>
+            </div>
+            <div class="social-links-center" style="text-align:center; margin: 40px 0;">
+                <h3><span>Follow me on social media</span></h3>
+                <ul style="display:inline-flex; gap:16px; list-style:none; padding:0; margin:8px 0 0 0;">
+                    <li><a href="https://www.facebook.com/Melodina.Santos.Maria"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/melodina-santos-061017y/"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://www.instagram.com/melodinasantos/"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.youtube.com/@melodinasantos"><i class="fa-brands fa-youtube"></i></a></li>
+                </ul>
             </div>
         </div>
     </div>
