--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                     <div class="section-title">
                         <h3 class="wow fadeInUp">contact me</h3>
                         <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque">reach out to <span>support</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s">Contact me for support, information, or to get involved.we're here help and welcome you to our community</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">Contact me for support, information. we're here help and welcome you to our community</p>
                     </div>
                     <!-- Section Title End -->
                 </div>
