--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="section-title dark-section">
                             <h3 class="wow fadeInUp">Professional Singer</h3>
                             <h1 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque"><span>Melodina Santos</span></h1>
-                            <p class="wow fadeInUp" data-wow-delay="0.4s">Rooted in traditional.Raised by jazz powered by passion</p>
+                            <p class="wow fadeInUp" data-wow-delay="0.4s">Raised by different genre powered by passion.</p>
                         </div>
                         <!-- Section Title End -->                        
 
@@ -130,7 +130,7 @@
                     <div class="section-title-content-btn">
                         <!-- Section Tite Start -->
                         <div class="section-title">
-                            <h3 class="wow fadeInUp">about me</h3>
+                            <h3 class="wow fadeInUp"></h3>
                             <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque">The soundtrack to your most <span>unforgettable</span></h2>
                         </div>
                         <!-- Section Tite End -->
