--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                     <div class="section-title-content-btn">
                         <!-- Section Tite Start -->
                         <div class="section-title">
-                            <h3 class="wow fadeInUp">about me</h3>
+                            <h3 class="wow fadeInUp"></h3>
                             <h2 class="wow fadeInUp" data-wow-delay="0.2s">The soundtrack to your most <span>unforgettable</span></h2>
                         </div>
                         <!-- Section Tite End -->
