--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                     <!-- Section Title Content Start -->
                     <div class="section-title-content">
                         <p class="wow fadeInUp" data-wow-delay="0.2s">
-                            Hi, I'm Melodina Santos — a dynamic and versatile artist with jazz at the heart of my sound.
+                            A dynamic and versatile artist with jazz at the heart of my sound.
                             My artistry goes beyond genre boundaries, as I love weaving together elements of pop, rock, R&B,
                             country, and even traditional Japanese music. This fusion allows me to connect with diverse audiences
                             and bring something fresh and unexpected to every set.
