--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <div class="col-lg-12">
                     <!-- Section Title Start -->
                     <div class="section-title section-title-center">
-                        <h3 class="wow fadeInUp">Melodina Santos</h3>
+                        <h3 class="wow fadeInUp"></h3>
                         <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque">Meet <span>Melodina Santos</span></h2>
                     </div>
                     <!-- Section Title End -->
