--- a/about.html
+++ b/about.html
@@ -143,6 +143,128 @@
     </div>
     <!-- About Us Section End -->
 
+<div class="page-service-single">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8">
+                <!-- Service Single Content Start -->
+                <div class="service-single-content">
+                    <!-- Service Featured Image Start -->
+                    <div class="service-featured-image">
+                        <figure class="image-anime reveal">
+                            <img src="https://html.awaikenthemes.com/gitar/images/service-featured-image.jpg" alt="">
+                        </figure>
+                    </div>
+                    <!-- Service Featured Image End -->
+
+                    <!-- Service Entry Start -->
+                    <div class="service-entry">
+<!--                        <p class="wow fadeInUp">Experience the magic of live music with our talented performers, delivering unforgettable melodies and rhythms for any occasion. From intimate gatherings to grand celebrations, we bring the energy and passion of live music to your event.</p>-->
+<!--                        <p class="wow fadeInUp" data-wow-delay="0.2s">Live music has the power to elevate any event, transforming it into an unforgettable experience. Our talented performers bring passion, energy, and expertise to every performance, delivering soulful melodies and captivating rhythms that resonate with audiences of all ages. Whether you're hosting an intimate gathering, a lively party, or a grand celebration, we tailor our performances to suit the mood and theme of your event. From acoustic sets to full-band arrangements, we offer a diverse range of musical styles to ensure your event is truly special. Let us create the perfect soundtrack for your unforgettable moments.</p>-->
+
+                        <!-- Service Work Box Start -->
+                        <div class="service-work-box">
+                            <h2 class="wow fadeInUp">Work <span>Experience</span></h2>
+                            <p class="wow fadeInUp" data-wow-delay="0.2s">
+                                Professional singer and stage performer with more than a decade of experience across top venues and events worldwide.
+                            </p>
+                            <div class="service-work-list">
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="0.4s">
+                                    <div class="service-work-no"><h2>01</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>TOKYO DISNEY RESORT (ORIENTAL LAND CO. LTD)</h3>
+                                        <p>Tokyo, Japan &mdash; Dec 2024</p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="0.5s">
+                                    <div class="service-work-no"><h2>02</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>ARTIST / THEATRE | DISNEY RECORDING JAPAN</h3>
+                                        <p>Tokyo, Japan &mdash; Dec 2024</p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="0.6s">
+                                    <div class="service-work-no"><h2>03</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>HILTON - MAIN SINGER</h3>
+                                        <p>Hiroshima, Tokyo, Japan &mdash; 2018-2023</p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="0.7s">
+                                    <div class="service-work-no"><h2>04</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>PRINCE HOTELS, INC. (Lounge Singer)</h3>
+                                        <p>Tokyo, Japan &mdash; 2018-2023</p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="0.8s">
+                                    <div class="service-work-no"><h2>05</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>TOKYO BAY COURT CLUB HOTEL & SPA RESORT</h3>
+                                        <p>Koto City, Tokyo, Japan &mdash; 2022</p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="0.9s">
+                                    <div class="service-work-no"><h2>06</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>ANDAZ TOKYO - Bossanova Jazz Latin Singer</h3>
+                                        <p>Tokyo, Japan &mdash; 2018</p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="1.0s">
+                                    <div class="service-work-no"><h2>07</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>PARK HYATT</h3>
+                                        <p>Tokyo, Japan &mdash; 2018</p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="1.1s">
+                                    <div class="service-work-no"><h2>08</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>THE RITZ-CARLTON HOTEL COMP., LLC - Jazz Latin Singer</h3>
+                                        <p>Tokyo, Japan &mdash; 2018</p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="1.2s">
+                                    <div class="service-work-no"><h2>09</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>GRAND HYATT TOKYO</h3>
+                                        <p>Tokyo, Japan &mdash; 2021-2022</p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="1.3s">
+                                    <div class="service-work-no"><h2>10</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>WEDDING SINGER - Wedding and Events</h3>
+                                        <p>Tokyo, Japan &mdash; 2014</p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="1.4s">
+                                    <div class="service-work-no"><h2>11</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>PROFESSIONAL SINGER / EVENT SINGER</h3>
+                                        <p>Toyota, Las Vegas, Nevada, USA &mdash; 2019</p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="1.5s">
+                                    <div class="service-work-no"><h2>12</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>PROFESSIONAL SINGER / EVENT SINGER</h3>
+                                        <p>Waldorf Astoria, New York City, NY, USA &mdash; 2018</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Service Work Box End -->
+                    </div>
+                    <!-- Service Entry End -->
+                </div>
+                <!-- Service Single Content End -->
+            </div>
+        </div>
+    </div>
+</div>
+
     <!-- Our Approach Section Start -->
     <div class="our-approach">
         <div class="container">
