--- a/about.html
+++ b/about.html
@@ -123,17 +123,8 @@
                 <div class="col-lg-5">
                     <!-- Section Title Content Start -->
                     <div class="section-title-content">
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">
-                            A dynamic and versatile artist with jazz at the heart of my sound.
-                            My artistry goes beyond genre boundaries, as I love weaving together elements of pop, rock, R&B,
-                            country, and even traditional Japanese music. This fusion allows me to connect with diverse audiences
-                            and bring something fresh and unexpected to every set.
-                        </p>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s">
-                            At the core of my work is the mission to inspire young talents through music.
-                            I believe in the power of authenticity, and I'm passionate about using my voice — not just to entertain,
-                            but to uplift, empower, and awaken something real in people's hearts.
-                        </p>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">A vocalist-fusion & blending timeless traditional music with the soulful curves of jazz and other genres. I love weaving together elements of  pop,rock R & B, country. This fusion allows me to connect with diverse audiences and bring something fresh and unexpected to every set.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">I'm on a mission to create bridges between cultures, genre & generations- inviting listeners into a space where ancient melodies meet modern expression.</p>
                     </div>
                     <!-- Section Tite Content End -->
                 </div>
