--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                     <!-- Section Title Content Start -->
                     <div class="section-title-content">
                         <p class="wow fadeInUp" data-wow-delay="0.2s">A vocalist-fusion & blending timeless traditional music with the soulful curves of jazz and other genres. Weaving together elements of pop, rock R & B, country. This fusion allows me to connect with diverse audiences and bring something fresh and unexpected to every set.</p>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s">Creating bridges between cultures, genre - inviting listeners into a space where ancient melodies meet modern expression.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">Creating bridges between cultures & genre - inviting listeners into a space where ancient melodies meet modern expression.</p>
                     </div>
                     <!-- Section Tite Content End -->
                 </div>
