--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         and bring something fresh and unexpected to every set.
                     </p>
                     <p class="wow fadeInUp" data-wow-delay="0.4s">
-                        At the core of my work is the mission to inspire young talents through music.
+                        At the core of my work is to inspire young talents through music.
                         I believe in the power of authenticity, and I'm passionate about using my voice — not just to
                         entertain,
                         but to uplift, empower, and awaken something real in people's hearts.
