--- a/about.html
+++ b/about.html
@@ -264,7 +264,7 @@
                     <!-- Section Title Start -->
                     <div class="section-title section-title-center">
                         <h3 class="wow fadeInUp">my approach</h3>
-                        <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque">mission, vision, and passion driving <span>our guitar craftsmanship</span></h2>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-cursor="-opaque">mission, vision, and passion driving</h2>
                     </div>
                     <!-- Section Title End -->
                 </div>
