--- a/about.html
+++ b/about.html
@@ -178,70 +178,105 @@
                                     <div class="service-work-no"><h2>03</h2></div>
                                     <div class="service-work-content">
                                         <h3>HILTON - MAIN SINGER</h3>
-                                        <p>Hiroshima, Tokyo, Japan </p>
+                                        <p>Tokyo, Japan </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="0.7s">
                                     <div class="service-work-no"><h2>04</h2></div>
                                     <div class="service-work-content">
-                                        <h3>PRINCE HOTELS, INC. (Lounge Singer)</h3>
-                                        <p>Tokyo, Japan</p>
+                                        <h3>HILTON - MAIN SINGER</h3>
+                                        <p>Hiroshima, Japan </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="0.8s">
                                     <div class="service-work-no"><h2>05</h2></div>
                                     <div class="service-work-content">
-                                        <h3>TOKYO BAY COURT CLUB HOTEL & SPA RESORT</h3>
-                                        <p>Koto City, Tokyo, Japan  </p>
+                                        <h3>PRINCE HOTELS, INC. (Lounge Singer)</h3>
+                                        <p>Tokyo, Japan</p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="0.9s">
                                     <div class="service-work-no"><h2>06</h2></div>
                                     <div class="service-work-content">
-                                        <h3>ANDAZ TOKYO - Bossanova Jazz Latin Singer</h3>
+                                        <h3>TOKYO BAY COURT CLUB HOTEL & SPA RESORT</h3>
                                         <p>Tokyo, Japan  </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.0s">
                                     <div class="service-work-no"><h2>07</h2></div>
                                     <div class="service-work-content">
-                                        <h3>PARK HYATT</h3>
-                                        <p>Tokyo, Japan  </p>
+                                        <h3>TOKYO BAY COURT CLUB HOTEL & SPA RESORT</h3>
+                                        <p>Koto City, Japan  </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.1s">
                                     <div class="service-work-no"><h2>08</h2></div>
                                     <div class="service-work-content">
-                                        <h3>THE RITZ-CARLTON HOTEL COMP., LLC - Jazz Latin Singer</h3>
+                                        <h3>ANDAZ TOKYO - Bossanova Jazz Latin Singer</h3>
                                         <p>Tokyo, Japan  </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.2s">
                                     <div class="service-work-no"><h2>09</h2></div>
                                     <div class="service-work-content">
-                                        <h3>GRAND HYATT TOKYO</h3>
-                                        <p>Tokyo, Japan </p>
+                                        <h3>PARK HYATT</h3>
+                                        <p>Tokyo, Japan  </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.3s">
                                     <div class="service-work-no"><h2>10</h2></div>
                                     <div class="service-work-content">
-                                        <h3>WEDDING SINGER - Wedding and Events</h3>
+                                        <h3>THE RITZ-CARLTON HOTEL COMP., LLC - Jazz Latin Singer</h3>
                                         <p>Tokyo, Japan  </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.4s">
                                     <div class="service-work-no"><h2>11</h2></div>
                                     <div class="service-work-content">
-                                        <h3>PROFESSIONAL SINGER / EVENT SINGER</h3>
-                                        <p>Toyota, Las Vegas, Nevada, USA  </p>
+                                        <h3>GRAND HYATT TOKYO</h3>
+                                        <p>Tokyo, Japan </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.5s">
                                     <div class="service-work-no"><h2>12</h2></div>
                                     <div class="service-work-content">
+                                        <h3>WEDDING SINGER - Wedding and Events</h3>
+                                        <p>Tokyo, Japan  </p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="1.6s">
+                                    <div class="service-work-no"><h2>13</h2></div>
+                                    <div class="service-work-content">
                                         <h3>PROFESSIONAL SINGER / EVENT SINGER</h3>
-                                        <p>Waldorf Astoria, New York City, NY, USA  </p>
+                                        <p>Nevada, USA  </p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="1.7s">
+                                    <div class="service-work-no"><h2>14</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>PROFESSIONAL SINGER / EVENT SINGER</h3>
+                                        <p>Toyota, USA  </p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="1.8s">
+                                    <div class="service-work-no"><h2>15</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>PROFESSIONAL SINGER / EVENT SINGER</h3>
+                                        <p>Las Vegas, USA  </p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="2.0s">
+                                    <div class="service-work-no"><h2>16</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>PROFESSIONAL SINGER / EVENT SINGER</h3>
+                                        <p>New York City, USA  </p>
+                                    </div>
+                                </div>
+                                <div class="service-work-item wow fadeInUp" data-wow-delay="2.1s">
+                                    <div class="service-work-no"><h2>17</h2></div>
+                                    <div class="service-work-content">
+                                        <h3>PROFESSIONAL SINGER / EVENT SINGER</h3>
+                                        <p>Waldorf Astoria, USA  </p>
                                     </div>
                                 </div>
                             </div>
