--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,11 @@
 	<link rel="stylesheet" href="https://html.awaikenthemes.com/gitar/css/mousecursor.css">
 	<!-- Main Custom Css -->
 	<link href="https://html.awaikenthemes.com/gitar/css/custom.css" rel="stylesheet" media="screen">
+    <style>
+        .footer-contact-box a[href^="mailto:"] {
+            text-transform: none !important;
+        }
+    </style>
 </head>
 <body>
 
