--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             font-size: 2rem; /* Adjust as needed */
         }
     </style>
+    <style>
+        .footer-contact-box a[href^="mailto:"] {
+            text-transform: none !important;
+        }
+    </style>
 </head>
 <body>
 
